Fixed overlay effect on mobile

--- a/style.css
+++ b/style.css
@@ -501,4 +501,7 @@ section h1 {
     max-width: 300px;
     max-height: 200px;
   }
+  .overlay {
+    display: none;
+  }
 }
